--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ button{
   background: rgba(0,0,0,0.4);
   border: 1px solid white;
   width: 20%;
+  outline: none;
 }
 .blur{
   min-height: 100vh;
